[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Sounds/ui_menu_button_beep_06.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/ui_stamp_01.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/BreakoutBall.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.972549, 0.968627, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
shadow_color = Color( 0.0235294, 0.0196078, 0.0196078, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.435294 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameHUD" type="CanvasLayer" parent="."]

[node name="DataBar" type="ProgressBar" parent="GameHUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 108.0
margin_bottom = 24.0
custom_styles/fg = SubResource( 1 )
step = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataLabel" type="Label" parent="GameHUD"]
margin_left = 125.0
margin_top = 10.0
margin_right = 276.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.0941176, 0.937255, 0.0352941, 1 )
text = "Download Progress"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="GameHUD"]
margin_left = 600.0
margin_top = 10.0
margin_right = 660.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.0941176, 0.937255, 0.0352941, 1 )
text = "Time Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerText" type="Label" parent="GameHUD"]
margin_left = 704.005
margin_top = 8.66516
margin_right = 744.005
margin_bottom = 22.6652
custom_colors/font_color = Color( 0.0941176, 0.937255, 0.0352941, 1 )
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameText" type="Label" parent="GameHUD"]
margin_left = 179.024
margin_top = 382.997
margin_right = 479.024
margin_bottom = 432.997
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.168627, 0.968627, 0.121569, 1 )
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball1" type="Sprite" parent="GameHUD"]
position = Vector2( 400, 15 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Ball2" type="Sprite" parent="GameHUD"]
position = Vector2( 425, 15 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Ball3" type="Sprite" parent="GameHUD"]
position = Vector2( 450, 15 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StartScreen" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="StartScreen"]
margin_left = 300.0
margin_top = 139.0
margin_right = 400.0
margin_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 4, 4 )
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0.0941176, 0.937255, 0.0352941, 1 )
text = "Code: Breakout"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="StartScreen" groups=[
"MenuItem",
]]
margin_left = 395.58
margin_top = 247.505
margin_right = 495.58
margin_bottom = 297.505
rect_scale = Vector2( 2, 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.423529, 0.937255, 0.113725, 1 )
action_mode = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="StartScreen" groups=[
"MenuItem",
]]
margin_left = 398.576
margin_top = 349.39
margin_right = 498.576
margin_bottom = 399.39
rect_scale = Vector2( 2, 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.423529, 0.937255, 0.113725, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuItemHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MenuItemClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="mouse_entered" from="StartScreen/PlayButton" to="." method="_on_menu_item_mouse_entered"]
[connection signal="mouse_entered" from="StartScreen/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="StartScreen/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="StartScreen/ExitButton" to="." method="_on_menu_item_mouse_entered"]
[connection signal="pressed" from="StartScreen/ExitButton" to="." method="_on_ExitButton_pressed"]
